7903788: preparation towards json configuration for jextract tool